prevent text from overflowing FileList items

--- a/src/components/FileList/FileList.module.scss
+++ b/src/components/FileList/FileList.module.scss
@@ -8,6 +8,9 @@
     border-radius: 8px;
     margin: 3px 0;
     padding-left: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   li:first-child,
